--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ bld/
 [Bb]in/
 [Oo]bj/
 
+[Vv]endor
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
